JBIDE-20387: Better error markers by utilizing the information available in FreeMarker's ParseException: column numbers, end position, editorMessage